scripts/nullaway/nullgtn/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8.txt
../nullgtn/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/Character.java:41: error: [NullAway] initializer method does not guarantee @NonNull field _attributes (line 29) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Character() {
           ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
